<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageViewTotalPriceLayout"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:background="@color/abc_search_url_text_normal"
        android:padding="3dp" />

    <TextView
        android:id="@+id/textViewNameTotalPriceLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="Menu"
        android:textColor="#325afb"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageViewTotalPriceLayout"
        android:layout_toEndOf="@+id/imageViewTotalPriceLayout" />


    <TextView
        android:id="@+id/textViewQuantityTotalPriceLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="4"
        android:text="Qty : "
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:layout_below="@+id/textViewPriceValueTotalPriceLayout"
        android:layout_toRightOf="@+id/imageViewTotalPriceLayout"
        android:layout_toEndOf="@+id/imageViewTotalPriceLayout" />

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:layout_alignTop="@+id/textViewQuantityTotalPriceLayout"
        android:layout_toRightOf="@+id/textViewQuantityTotalPriceLayout"
        android:layout_marginLeft="10dp"
        android:id="@+id/textViewQuantityValueTotalPriceLayout" />

    <TextView
        android:text="000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPriceValueTotalPriceLayout"
        android:textColor="#fa2929"
        android:textSize="20dp"
        android:layout_below="@+id/textViewNameTotalPriceLayout"
        android:layout_alignLeft="@+id/textViewQuantityTotalPriceLayout"
        android:layout_alignStart="@+id/textViewQuantityTotalPriceLayout" />


</RelativeLayout>
