<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewMenuDisplay"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="false"
        android:divider="#fffefe"
        android:dividerHeight="1dp"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/buttonMenuOrderSummary" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Order Summary"
        android:id="@+id/buttonMenuOrderSummary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
