...
            android:layout_above="@+id/editTextMenuDetailQuantity"
            android:layout_centerHorizontal="true"
            android:text="Please enter the amount you would like to order"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonPlusMenuDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextMenuDetailQuantity"
            android:layout_toRightOf="@+id/editTextMenuDetailQuantity"
            android:onClick="onClickPlus"
            android:text="+" />
...
            android:ems="10"
            android:inputType="number"
            android:text="0"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonMenuDetailOrder"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignEnd="@+id/textView_quantityText"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/textView_quantityText"
            android:text="@string/add_to_order" />
...
